--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
     ],
     "require": {
         "twig/twig": "^3.0"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
