--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "filp/whoops": "^2.14"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
