--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     ],
     "require": {
         "twig/twig": "^3.0",
-        "filp/whoops": "^2.14"
+        "filp/whoops": "^2.14",
+        "fakerphp/faker": "^1.20",
+        "symfony/var-dumper": "^6.1"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
