--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
         "symfony/google-mailer": "^6.1"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "*"
     }
 }
