--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "garom/testgestionsutilisateurs",
-    "licence": "proprietary",
+    "license": "proprietary",
     "autoload": {
         "psr-4": {
             "App\\": "src/"
