--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "fakerphp/faker": "^1.20",
         "symfony/var-dumper": "^6.1",
         "symfony/mailer": "^6.1",
-        "symfony/google-mailer": "^6.1"
+        "symfony/google-mailer": "^6.1",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
